--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,4 +1,14 @@
 /* styles.css */
+.custom-title {
+  color: #2C3E50 !important;
+  font-size: 42px;
+  font-weight: bold;
+}
+
+.subtitle, .author, .date {
+  text-decoration: none;
+}
+
 body {
     font-size: 12pt;
 }
@@ -12,9 +22,18 @@ blockquote {
 }
 
 h1 {
+  color: #2C3E50 !important;
   font-weight: bold;
 }
 
 h2 {
   font-weight: bold;
+}
+
+h3 {
+  text-decoration: underline;
+}
+
+h4 {
+  text-decoration: underline;
 }
