--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -115,3 +115,33 @@ blockquote {
 .fa-icon:hover {
   color: #005f73;
 }
+
+/* map box */
+.map-container {
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  border: 2px solid #2a9d8f;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+}
+
+.map-container .leaflet-container {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: 768px) {/* fills container on desktop */
+  .map-container {
+    display: flex;
+  }
+
+  .map-container .leaflet-container {
+    flex-grow: 1;
+  }
+}
